version/0.41/_sources/api/solver/_autosummary/settings/network_end.rst.txt
:orphan:

.. _network_end:

network_end
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.network_end
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`create <create_6>`                                           Crate new boundary.

:ref:`delete <delete>`                                        Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list_1>`                                    List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`network_end_child <network_end_child>`


.. rubric:: Included in:

==============================   ===================================================

Parent                                                                       Summary

==============================   ===================================================
:ref:`boundaries <boundaries>`       Defines physics boundaries for a volume region.

==============================   ===================================================

